# imdb-reviews-agent

./: .gitignore  README.md  data_exploration_notes.txt  main.py  notes.txt  pyproject.toml  streamlit_app.py
reviews/: agents.py  app.py  config.py  data.py  tools.py
tests/: test_agents.py  test_data.py  test_tools.py
